# mini-rlm

./: .gitignore  AGENTS.md  Makefile  Notes.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: nbdev-prepare.yml
mini_rlm/: _modidx.py  rlm_lisette_v2.py
nbs/: index.ipynb  nbdev.yml  rlm_lisette_v2.ipynb
rlm-animation/: render_v3.py
scripts/: add_export_markers.py  add_export_rlm_openrouter.py
